# aegis

./: README.MD  pyproject.toml
aegis_ir/: __init__.py  actions.py  audit.py  cli.py  config.py  llm.py  web.py
tests/: test_actions.py  test_audit.py
